assets/editor/css/editor.css
/*Get the colors file*/

@import url("colors.css");
body {
  color: black;
}

#BrandNav {
  border-bottom: 1px solid black;
  height: 64px;
}

#userMenuBars {
  font-size: 28px;
}

#UserHolder {
  width: 320px;
}

#UserHolder li {
  margin-left: 15px;
}

#Name,
#presentation_name {
  font-size: 16px;
  font-weight: bold;
}

#presentation_name {
  outline: none;
  border: none;
  text-align: right;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 320px;
  min-width: 135px;
  width: 165px;
  margin-right: 5px;
}

.expandable-holder {
  width: fit-content;
  border-radius: 5px;
  text-align: right;
  display: inline;
  padding: 5px;
}

.expandable-holder:focus,
.expandable-holder:hover,
.expandable-holder:active {
  border: 1px solid black;
}

#Email {
  font-size: 12px;
}

.navigate-action {
  font-size: 25px;
  cursor: pointer;
  margin-left: 5px;
  margin-right: 5px;
}

/* #SlideStatusHolder li {
	font-size: 16px;
} */

#SlideControlHolder svg {
  margin: auto;
}

#SlideControlHolder .btn {
  margin-right: 12px;
  /* max-width: 155px; */
}

#AddLogo,
#AddLogo_BG,
#UploadCustomBG,
#UploadFirstCustomBG {
  max-width: 100%;
}

#Logo {
  width: 150px;
}

#MasterContainer {
  width: 100vw;
  display: flex;
  flex-direction: row;
}

#NoResponsiveSupport {
  display: none;
}

@media screen and (max-width: 500px) {
  #MasterContainer {
    display: none;
  }
  #NoResponsiveSupport {
    display: block;
  }
}

.t-align-center {
  text-align: center;
}

.NoResponsiveCentered {
  margin: auto;
  margin-top: 3rem !important;
}

.w-19rem {
  width: 19rem;
}

#ToolsTray {
  background-color: #000;
  width: 80px;
  height: calc(100vh - 64px);
}

.tool {
  width: 80px;
  margin: 0;
  padding: 12px 0;
  color: #fff;
  text-align: center;
  cursor: pointer;
  font-size: 25px;
}

.tool p {
  max-width: 96%;
  margin: auto;
  font-size: 16px;
  line-height: 20px;
}

.tool * {
  pointer-events: none;
}

.tool.active-tool {
  background-color: var(--active-tool);
  background-color: #484848;
}

#ActionsPanel {
  width: 350px;
  height: calc(100vh - 64px);
  transition: 0.6s;
  background-color: #484848;
}

#ActionsPanel.closed {
  width: 0 !important;
}

#MainPanel {
  width: calc(100vw - 524px);
  height: calc(100vh - 64px);
  transition: 0.6s;
  position: relative;
}

#MainPanel.expanded {
  width: calc(100vw - 254px);
}

#SlidesPanel {
  width: 240px;
  max-height: calc(100vh - 64px);
  background-color: var(--active-tool);
  transition: 0.6s;
  text-align: center;
}

#SlidesList {
  padding: 8px 28px 20px 12px;
  max-height: calc(100vh - 140px);
}

.control-section .btn-primary,
.control-section .btn-primary:hover,
.control-section .btn-primary:active,
.control-section .btn-primary:focus,
.default-button,
.default-button:hover,
.default-button:active,
.default-button:focus {
  background-color: var(--control-button) !important;
  border-color: var(--control-button) !important;
  color: white;
  border-radius: 50px;
}

.search-section {
  padding: 13px;
  flex: 0 1 auto;
  box-shadow: 0px 10px 10px 0px #000;
  z-index: 3;
  position: relative;
}

.control-section {
  box-shadow: 0px -2px 30px 0px #000;
  padding: 15px;
  flex: 1 0 auto;
}

.search-section .input-group-text {
  background: white;
  border: none;
  font-size: 12px;
}

.search-section input {
  border: none;
  height: inherit;
  font-size: 18px;
}

.search-section .input-group {
  height: 28px;
}

.main-section {
  flex: 1 1 auto;
  height: 100%;
  overflow: hidden;
  position: relative;
}

.action-panel {
  display: flex;
  flex-flow: column;
  height: 100%;
}

#SlideContainer {
  text-align: center;
}

.slide-thumbnail.active-slide,
#Images_Panel .images-gallery .image-item.active,
.control-overlay-layout .image-item.active {
  border: 2px solid salmon !important;
  border-radius: 0.25rem;
}

.slide-thumbnail {
  display: flex;
  position: relative;
  cursor: pointer;
  transition: 0.6s;
  margin-bottom: 20px;
  border: 2px solid var(--active-tool);
}

.slide-thumbnail img {
  width: 100%;
  height: 85px;
}

.slide-thumbnail:hover,
.color:hover,
.image-item:hover {
  box-shadow: 0px 0 1px 2px #fff;
}

.remove-slide {
  opacity: 0.6;
  position: absolute;
  top: 2px;
  right: 2px;
  z-index: 3;
  cursor: pointer;
  transition: 0.2s;
  padding: 2px 8px;
  background-color: rgba(0, 0, 0, 0.8);
  display: none;
}

.slide-thumbnail:hover .remove-slide {
  display: inline-block;
}

.remove-slide:hover {
  opacity: 1;
  box-shadow: 0 0 8px 1px lightgrey;
}

.control-overlay-layout,
.backdrop-overlay-layout {
  position: absolute;
  width: 100%;
  top: 0;
  height: -webkit-fill-available;
  z-index: 3;
  background-color: white;
  transition: 0.4s;
  font-size: 14px;
}

.backdrop-overlay-layout {
  opacity: 0.6;
  background-color: black;
  z-index: 2;
}

.control-overlay-layout.closed {
  top: 100% !important;
}

#FeedbackBtn,
#FeedbackBtn:hover,
#FeedbackBtn:active,
#FeedbackBtn:focus,
.btn-highlight,
.btn-highlight:hover,
.btn-highlight:active,
.btn-highlight:focus {
  background-color: var(--feedback-button) !important;
  border-color: var(--feedback-button) !important;
  color: white;
  font-weight: bold;
}

.colors-container {
  display: flex;
  flex-flow: row wrap;
  margin: auto;
  width: 94%;
  justify-content: center;
  border-radius: 5px;
}

.color {
  border-radius: 50%;
  margin: 10px;
  flex: 0 1 calc(20% - 8px);
  height: 50px;
  /* transition: .3s; */
  cursor: pointer;
  /* border: 0px solid #000; */
}

.color.template-icon-color {
  margin: 1% 4%;
  flex: 0 1 calc(25.3%);
  height: calc(17%);
}

.color.active {
  border: 5px solid hsl(0deg 0% 100%);
}

#SelectedColorTemplate_Name {
  float: left;
  margin-top: -2px;
  font-size: 15px;
  max-width: calc(100% - 40px);
  overflow: hidden;
  text-overflow: ellipsis;
}

.custom-dropdown {
  position: absolute;
  width: calc(100% - 26px);
  height: 190px;
  z-index: 3;
  background-color: white;
  border-radius: 5px;
  display: none;
}
/* ... */

